--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>웹퍼블리셔 홍길동의 포트폴리오</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width:767px)">
     <link rel="stylesheet" href="css/pc.css" media="screen and (min-width: 768px)">
 </head>
 <body>
-    <header>
+    <header class="container">
         <h1><a href="#">hong gil dong</a></h1>
-        <ul>
-            <li><a href="#">github</a></li>
-            <li><a href="#">blog</a></li>
-            <li><a href="#">linked in</a></li>
+        <ul class="icons">
+            <li><a href="#"><img src="images/mdi_github.svg" alt="github"></a></li>
+            <li><a href="#"><img src="images/uil_blogger.svg" alt="blog"></a></li>
+            <li><a href="#"><img src="images/mdi_linkedin.svg" alt="linked in"></a></li>
         </ul>
     </header>
 
