--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
         </ul>
     </header>
 
-    <section id="title">
-        <h2>Nice to meet you!<br>
-        I'm Hong Gil dong.</h2>
-        <!-- 자기소개 2~ 3줄 -->
-        <p>저는 경기도 일산에 사는 웹 퍼블리셔 지망생입니다. 웹디자인과 프론트엔드에 열정을 가지고 미래를 꿈꾸며 성장하고 싶습니다.</p>
-
-        <a href="mailto:hkd" class="mail-btn"></a>
+    <section id="title" class="container">
+        <div class="title-box">
+            <h2>Nice to meet you!<br>
+                I'm <span class="accent-line">Hong Gil dong</span>.
+            </h2>
+            <!-- 자기소개 2~ 3줄 -->
+            <p>저는 경기도 일산에 사는 웹 퍼블리셔 지망생입니다.<br>웹디자인과 프론트엔드에 열정을 가지고<br> 미래를 꿈꾸며 성장하고 싶습니다.</p>
+        
+            <a href="mailto:hkd" class="mail-btn btn">contact me</a>
+        </div>
     </section>
-
 
 </body>
 </html>
