--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div><!-- hero -->
 
     <section id="skills" class="container">
+        <h2>Skills</h2>
         <ul class="skill-list">
             <li>
                 <h3>HTML</h3>
@@ -53,13 +54,60 @@
             </li>
             <li>
                 <h3>React</h3>
-                <p>최신 프론트엔드 경향을 반영한 UI 프레임워크에 대한 활용과 스터디를 꾸준히 하고 있습니다.</p>
+                <p>컴포넌트 기반의 UI 프레임워크에 대한 활용과 스터디를 꾸준히 하고 있습니다.</p>
             </li>
             <li>
                 <h3>SASS</h3>
                 <p>CSS를 능숙하게 다루며 협업능력과 생산성을 향상 시킬 수 있습니다.</p>
             </li>
         </ul>
+    </section>
+
+    <section id="projects" class="container">
+        <div class="title-group">
+            <h2>Projects</h2>
+            <a href="mailto:hgd@naver.com" class="btn">contact me</a>
+        </div>
+        
+        <ul class="item-list">
+            <li>
+                <img src="images/work01.webp" alt="작품1">
+                <h3>logo design</h3>
+                <div class="skills">
+                    <span>Photoshop</span>
+                    <span>Illustrator</span>
+                </div>
+            </li>
+            <li>
+                <img src="images/work02.webp" alt="작품2">
+                <h3>브랜딩 홈페이지</h3>
+                <div class="skills">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>SASS</span>
+                    <span>Javascript</span>
+                </div>
+            </li>
+            <li>
+                <img src="images/work03.webp" alt="작품3">
+                <h3>아이콘 디자인</h3>
+                <div class="skills">
+                    <span>Figma</span>
+                    <span>Photoshop</span>
+                </div>
+            </li>
+            <li>
+                <img src="images/work06.png" alt="작품4">
+                <h3>날씨 앱</h3>
+                <div class="skills">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>Javascript</span>
+                    <span>React</span>
+                </div>
+            </li>
+        </ul>
+
     </section>
 
 </body>
