projects 작품소개 영역

--- a/index.html
+++ b/index.html
@@ -71,40 +71,48 @@
         
         <ul class="item-list">
             <li>
-                <img src="images/work01.webp" alt="작품1">
-                <h3>logo design</h3>
-                <div class="skills">
-                    <span>Photoshop</span>
-                    <span>Illustrator</span>
-                </div>
+                <a href="#">
+                    <img src="images/work01.webp" alt="작품1">
+                    <h3>logo design</h3>
+                    <div class="skills">
+                        <span>Photoshop</span>
+                        <span>Illustrator</span>
+                    </div>
+                </a>
             </li>
             <li>
-                <img src="images/work02.webp" alt="작품2">
-                <h3>브랜딩 홈페이지</h3>
-                <div class="skills">
-                    <span>HTML</span>
-                    <span>CSS</span>
-                    <span>SASS</span>
-                    <span>Javascript</span>
-                </div>
+                <a href="#">
+                    <img src="images/work02.webp" alt="작품2">
+                    <h3>브랜딩 홈페이지</h3>
+                    <div class="skills">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>SASS</span>
+                        <span>Javascript</span>
+                    </div>
+                </a>
             </li>
             <li>
-                <img src="images/work03.webp" alt="작품3">
-                <h3>아이콘 디자인</h3>
-                <div class="skills">
-                    <span>Figma</span>
-                    <span>Photoshop</span>
-                </div>
+                <a href="#">
+                    <img src="images/work03.webp" alt="작품3">
+                    <h3>아이콘 디자인</h3>
+                    <div class="skills">
+                        <span>Figma</span>
+                        <span>Photoshop</span>
+                    </div>
+                </a>
             </li>
             <li>
-                <img src="images/work06.png" alt="작품4">
-                <h3>날씨 앱</h3>
-                <div class="skills">
-                    <span>HTML</span>
-                    <span>CSS</span>
-                    <span>Javascript</span>
-                    <span>React</span>
-                </div>
+                <a href="#">
+                    <img src="images/work06.png" alt="작품4">
+                    <h3>날씨 앱</h3>
+                    <div class="skills">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Javascript</span>
+                        <span>React</span>
+                    </div>
+                </a>
             </li>
         </ul>
 
