--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- 자기소개 2~ 3줄 -->
                 <p>저는 경기도 일산에 사는 웹 퍼블리셔 지망생입니다.<br>웹디자인과 프론트엔드에 열정을 가지고<br> 미래를 꿈꾸며 성장하고 싶습니다.</p>
             
-                <a href="#projects" class="mail-btn btn">Projects</a>
+                <a href="#projects" class="mail-btn btn">작품 보러가기</a>
             </div>
         </section>
     </div><!-- hero -->
@@ -49,8 +49,8 @@
                 <p>사용자와 상호작용하는 UI 구현 및 서버 API를 활용할 수 있습니다.</p>
             </li>
             <li>
-                <h3>Accessibility</h3>
-                <p>웹 접근성을 준수하고 다양한 사용자들이 정보를 잘 이용할 수 있도록 마크업 할 수 있습니다.</p>
+                <h3>Figma</h3>
+                <p>피그마를 활용하여 UI 설계 및 디자인이 가능합니다.</p>
             </li>
             <li>
                 <h3>React</h3>
@@ -65,7 +65,7 @@
 
     <section id="projects" class="container">
         <div class="title-group">
-            <h2>Projects</h2>
+            <h2>Works</h2>
             <a href="mailto:hgd@naver.com" class="btn">contact me</a>
         </div>
         
@@ -117,6 +117,17 @@
         </ul>
 
     </section>
+
+    <footer id="footer">
+        <div class="container">
+            <h1><a href="#">hong gil dong</a></h1>
+            <ul class="icons">
+                <li><a href="#"><img src="images/mdi_github.svg" alt="github"></a></li>
+                <li><a href="#"><img src="images/uil_blogger.svg" alt="blog"></a></li>
+                <li><a href="#"><img src="images/mdi_linkedin.svg" alt="linked in"></a></li>
+            </ul>
+        </div>
+    </footer>
 
 </body>
 </html>
